--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "grunt-cli": "~0.1.13",
     "dgeni": "~0.4.0",
     "grunt": "~0.4.5",
-    "dgeni-packages": "~0.10.0-rc.6"
+    "dgeni-packages": "~0.10.0-rc.6",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-regarde": "~0.1.1",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-git": "~0.2.14",
+    "grunt-shell": "~1.1.1",
+    "jshint-stylish": "~1.0.0"
   }
 }
