--- a/.jshintrc
+++ b/.jshintrc
@@ -5,6 +5,7 @@
   "camelcase": true,
   "curly": true,
   "eqeqeq": true,
+  "expr" : true,
   "immed": true,
   "indent": 2,
   "latedef": true,
@@ -18,6 +19,8 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
+    // node
+    "require": true,
   	// grunt
   	"grunt": true,
   	"module": true,
