--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dgeni",
     "document generation",
     "javascript",
-    "jsdoc"
+    "jsdoc",
     "automatic"
   ],
   "license": "MIT",
@@ -33,7 +33,6 @@
   "homepage": "https://github.com/k-kinzal/grunt-dgeni",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-regarde": "~0.1.1",
