--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-dgeni",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "generating documentation for grunt task",
   "main": "tasks/dgeni.js",
   "scripts": {
     "test": "grunt test"
