--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-jasmine-node": "~0.2.1",
     "grunt-regarde": "~0.1.1",
     "grunt-shell": "~1.1.1",
-    "grunt-jasmine-node": "~0.2.1",
-    "jshint-stylish": "~1.0.0",
     "jasmine-node": "~1.14.5",
-    "proxyquire": "~1.0.1"
+    "jshint-stylish": "~1.0.0",
+    "proxyquire": "^1.0.1"
   },
   "dependencies": {
-    "dgeni": "~0.4.0",
-    "dgeni-packages": "~0.10.0-rc.4",
-    "dgeni-markdown": "~0.0.1"
+    "dgeni": "^0.4.1",
+    "dgeni-markdown": "0.0.3",
+    "dgeni-packages": "^0.10.7"
   }
 }
