--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jshint": "^0.11.1",
-    "grunt-jasmine-node": "~0.2.1",
+    "grunt-jasmine-node": "^0.3.0",
     "grunt-regarde": "~0.1.1",
     "grunt-shell": "~1.1.1",
     "jasmine-node": "~1.14.5",
