--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "grunt-regarde": "~0.1.1",
     "grunt-shell": "~1.1.1",
     "jasmine-node": "~1.14.5",
-    "jshint-stylish": "~1.0.0",
+    "jshint-stylish": "^2.0.0",
     "proxyquire": "^1.0.1"
   },
   "dependencies": {
