--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "homepage": "https://github.com/k-kinzal/grunt-dgeni",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-jshint": "^0.11.1",
     "grunt-jasmine-node": "^0.3.0",
     "grunt-regarde": "~0.1.1",
@@ -43,8 +43,8 @@
     "proxyquire": "^1.0.1"
   },
   "dependencies": {
-    "dgeni": "^0.4.1",
+    "dgeni": "^0.4.2",
     "dgeni-markdown": "0.0.3",
-    "dgeni-packages": "^0.10.7"
+    "dgeni-packages": "^0.11.1"
   }
 }
