--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language:
 - node_js
 node_js:
-- 0.10
+- node
 before_install:
+- npm install -g npm@latest
 - npm install -g grunt-cli
 install:
 - npm install
